<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.manuel.formulario2.MainActivity">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">
    <TextView
        android:id="@+id/tvNombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/texto_nombre"
        android:textStyle="bold"
        android:inputType="textCapSentences"
        android:textSize="@dimen/texto_tamaño"
        />

    <EditText
        android:id="@+id/eNombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/texto_nombre"
        android:textSize="@dimen/texto_tamaño"
        />
</LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/tvTelefono"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/texto_telefono"
            android:inputType="phone"
            android:textSize="@dimen/texto_tamaño"

            />
        <EditText
            android:id="@+id/eTelefono"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/texto_telefono"
            android:textSize="@dimen/texto_tamaño"
            />
    </LinearLayout>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/tvEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/texto_email"
        android:inputType="textEmailAddress"
        android:textSize="@dimen/texto_tamaño"

        />
    <EditText
        android:id="@+id/eEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/texto_email"
        android:textSize="@dimen/texto_tamaño"
        />
</LinearLayout>


<LinearLayout
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    android:orientation="horizontal">
    <TextView
        android:id="@+id/tvEdad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/texto_edad"
        android:textSize="@dimen/texto_tamaño"
        />

    <EditText
        android:id="@+id/eEdad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/texto_edad"
        android:textSize="@dimen/texto_tamaño"
        />

</LinearLayout>

    <Button
        android:id="@+id/btFecha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/texto_boton_fecha"
        android:theme="@style/MiBotonRaised"
        android:textSize="@dimen/texto_tamaño"


        />

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <TextView
        android:id="@+id/tvDescripcion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/texto_descripcion"
        android:textSize="@dimen/texto_tamaño"
        />
    <EditText
        android:id="@+id/eDescripcion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/texto_descripcion"
        android:inputType="textMultiLine"
        android:singleLine="false"
        android:lines="7"
        android:textSize="@dimen/texto_tamaño"
        />

</LinearLayout>




    <Button
        android:id="@+id/btSiguiente"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/texto_boton_siguiente"
        android:theme="@style/MiBotonRaised"
        android:textSize="@dimen/texto_tamaño"
        android:onClick="EnviarDatos"

        />


</LinearLayout>
